--- a/temples.html
+++ b/temples.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <h1>The Church of Jesus Christ of Latter-day Saints Temples</h1>
-        <button id="menuToggle" class="hamburger">☰</button>
+        <button id="hamburger">☰</button>
         <nav id="navMenu" class="nav-menu">
             <a href="#">Home</a>
             <a href="#">Old</a>
@@ -77,8 +77,6 @@
         <p>© <span id="currentyear"></span>| Racheal Katono | Mukono, Uganda</p>
         <p id="lastModified" class="header-highlight">Last Modified: <span id="last-modified-date"></span></p>
     </footer>
-
-    <script src="scripts/temples.js" defer></script>
 </body>
 
 </html>
