--- a/temples.html
+++ b/temples.html
@@ -35,7 +35,7 @@
                 <figcaption>harare-zimbabwe</figcaption>
             </figure>
             <figure>
-                <img src="images/Los Angeles California.jpg" alt="Temple 2">
+                <img src="images/Los-Angeles-California.jpg" alt="Temple 2">
                 <figcaption>Los Angeles California</figcaption>
             </figure>
             <figure>
@@ -43,27 +43,27 @@
                 <figcaption>Manila-Philippines</figcaption>
             </figure>
             <figure>
-                <img src="images/Nairobi kenya.jpg" alt="Temple 4">
+                <img src="images/Nairobi-kenya.jpg" alt="Temple 4">
                 <figcaption>Nairobi Kenya</figcaption>
             </figure>
             <figure>
-                <img src="images/Northern california.jpg" alt="Temple 5">
+                <img src="images/Northern-california.jpg" alt="Temple 5">
                 <figcaption>Northern California</figcaption>
             </figure>
             <figure>
-                <img src="images/Preston England.jpg" alt="Temple 6">
+                <img src="images/Preston-England.jpg" alt="Temple 6">
                 <figcaption>Preston England</figcaption>
             </figure>
             <figure>
-                <img src="images/salt lake Utah.jpg" alt="Temple 7">
+                <img src="images/salt-lake-Utah.jpg" alt="Temple 7">
                 <figcaption>Salt lake Utah</figcaption>
             </figure>
             <figure>
-                <img src="images/Santo Domingo.jpg" alt="Temple 8">
+                <img src="images/Santo-Domingo.jpg" alt="Temple 8">
                 <figcaption>Santo Domingo</figcaption>
             </figure>
             <figure>
-                <img src="images/South Africa, Johannesburg.jpg" alt="Temple 9">
+                <img src="images/South-Africa,Johannesburg.jpg" alt="Temple 9">
                 <figcaption>Johannesburg,South Africa</figcaption>
             </figure>
             <figure>
