--- a/temples.html
+++ b/temples.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <script src="scripts/temple.js" defer></script>
+    <script src="scripts/temples.js" defer></script>
 </head>
 
 <body>
