--- a/place.html
+++ b/place.html
@@ -8,10 +8,10 @@
     <title>UGANDA,THE PEARL OF AFRICA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="styles/places.css">
-    <link rel="stylesheet" href="styles/places-large.css">
+    <link rel="stylesheet" href="styles/place.css">
+    <link rel="stylesheet" href="styles/place-large.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <script src="scripts/places.js" defer></script>
+    <script src="scripts/place.js" defer></script>
 
 </head>
 <body>
