--- a/place.html
+++ b/place.html
@@ -28,7 +28,7 @@
         <div class="hero">
             <picture>
                 <source srcset="images/Lion-King-of-the-Jungle.webp">
-                <img src="images/Lion-King-of-the-Jungle.webp" alt="Beautiful Uganda">
+                <img src="images/Lion-King-of-the-Jungle.webp" alt="Lion King of the Jungle">
             </picture>
         </div>
         <div class="data">
