--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -28,6 +28,7 @@
         </nav>
     </header> 
     <main>
+        <h2>Temples</h2>
         <div id="temple-container"></div>
     </main>   
     <footer>
