--- a/review.html
+++ b/review.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Submitted</title>
+    <meta name="description" content="Uganda, the Pearl of Africa, is known for its breathtaking landscapes, diverse wildlife, and rich cultural heritage.">
+    <meta name="author" content="Racheal Katono">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Review Form</title>
     <link rel="stylesheet" href="styles/form.css">
 </head>
 <body>
